# nexis

./: LICENSE  README.md  package-lock.json  report.md
app/: openapi.json  (+1 more)
app/backend/: .gitignore  Cargo.toml  README.md
app/backend/migrations/: 20240918025022_users_table.up.sql
app/backend/nexis-py/: .gitignore  README.md  requirements.txt  run.py
app/backend/nexis-py/nexis_py/: __init__.py  settings.py
app/backend/nexis-py/nexis_py/colors/: __init__.py
app/backend/nexis-py/nexis_py/routes/: __init__.py  health_check.py
app/backend/nexis-py/nexis_py/types/: responses.py
app/backend/nexis-py/nexis_py/utils/: __init__.py
app/backend/nexis-py/settings/: base_example.toml  development_example.toml  production_example.toml
app/backend/nexis-rs/: .gitignore  Cargo.toml  README.md
app/backend/nexis-rs/settings/: base_example.yaml  development_example.yaml  production_example.yaml
app/backend/nexis-rs/src/: lib.rs  main.rs  prelude.rs  settings.rs  startup.rs  telemetry.rs
app/backend/settings/: development_example.yaml  production_example.yaml
app/backend/src/: lib.rs  prelude.rs  settings.rs  startup.rs  telemetry.rs
app/backend/src/database/: mod.rs  users.rs
app/backend/src/routes/: mod.rs
app/backend/src/types/: common.rs  error.rs  mod.rs  tokens.rs  users.rs
app/backend/src/utils/: emails.rs  mod.rs
app/backend/traslado/: conex_mong.py  conex_postg.py  create_squema.py  traslado.py
app/backend/traslado/multiple_transactions/: transaction_clothes.py  transaction_techGpu.py  transaction_tecnologi_CPU.py  transaction_users.py
mock-data-gen/mongodb-mock/: Cargo.toml
mock-data-gen/mongodb-mock/src/: clothes.rs  common.rs  food.rs  lib.rs  library.rs  main.rs  other.rs  prelude.rs  store.rs  tech.rs  user.rs
(+219 files in other folders)
