[package]
name = "backend"
version = "0.1.0"
authors = ["Kaucrow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.5.1", features = ["rustls-0_23"] }
anyhow = "1.0.91"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", features = ["yaml"] }
deadpool-redis = "0.15.1"
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
lettre = { version = "0.11.7", features = ["builder", "tokio1-native-tls"] }
minijinja = "2.0.0"
mongodb = "3.1.0"
once_cell = "1.19.0"
pasetors = "0.6.8"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
serde = "1.0.200"
serde_json = { version = "1.0.117", features = ["raw_value"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.65"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    "json",
    "tracing-log"
] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
