[package]
name = "mongodb-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
fake = { version = "2.10.0", features = ["derive", "random_color", "uuid"] }
futures-util = "0.3.31"
mongodb = "3.1.0"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
uuid = "1.11.0"
